[gd_scene load_steps=17 format=2]

[ext_resource path="res://Images/default_inventory_background.png" type="Texture" id=1]
[ext_resource path="res://Images/item_slot_default_background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Slot.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Images/Exp.png" type="Texture" id=5]
[ext_resource path="res://Images/ActiveExp.png" type="Texture" id=6]
[ext_resource path="res://Images/UiBag.png" type="Texture" id=9]
[ext_resource path="res://Images/m5x7.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Images/Class.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Skills.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[node name="Inventory" type="Node2D"]
position = Vector2( 0, -25 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 117.558
margin_top = 78.7939
margin_right = 324.558
margin_bottom = 190.794
rect_scale = Vector2( 1, 1.358 )
texture = ExtResource( 1 )

[node name="Skills" type="Node2D" parent="."]
position = Vector2( 197, 61 )
script = ExtResource( 15 )

[node name="Labels" type="Node2D" parent="Skills"]

[node name="Lv15" type="Label" parent="Skills/Labels"]
margin_left = 95.0
margin_top = 39.0
margin_right = 128.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "Lv15"
align = 1
valign = 3

[node name="Lv10" type="Label" parent="Skills/Labels"]
margin_left = 50.0
margin_top = 39.0
margin_right = 83.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "Lv10"
align = 1
valign = 3

[node name="Lv5" type="Label" parent="Skills/Labels"]
margin_left = 6.0
margin_top = 39.0
margin_right = 39.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "Lv5"
align = 1
valign = 3

[node name="Colect" type="Label" parent="Skills/Labels"]
margin_left = -34.0
margin_top = 56.0
margin_right = -1.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 4 )
text = "Colect:"
align = 1
valign = 3

[node name="Combat" type="Label" parent="Skills/Labels"]
margin_left = -34.0
margin_top = 76.0
margin_right = 5.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 4 )
text = "Combat:"
align = 1
valign = 3

[node name="Craft" type="Label" parent="Skills/Labels"]
margin_left = -34.0
margin_top = 97.0
margin_right = -1.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 4 )
text = "Craft:"
align = 1
valign = 3

[node name="Class" type="Label" parent="Skills/Labels"]
margin_left = -34.0
margin_top = 118.0
margin_right = -1.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 4 )
text = "Class:"
align = 1
valign = 3

[node name="Slots" type="GridContainer" parent="Skills"]
margin_left = 14.0
margin_top = 58.0
margin_right = 70.0
margin_bottom = 134.0
custom_constants/hseparation = 29
columns = 3

[node name="Slot1" type="Panel" parent="Skills/Slots"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot2" type="Panel" parent="Skills/Slots"]
margin_left = 45.0
margin_right = 61.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot3" type="Panel" parent="Skills/Slots"]
margin_left = 90.0
margin_right = 106.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot4" type="Panel" parent="Skills/Slots"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot5" type="Panel" parent="Skills/Slots"]
margin_left = 45.0
margin_top = 20.0
margin_right = 61.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot6" type="Panel" parent="Skills/Slots"]
margin_left = 90.0
margin_top = 20.0
margin_right = 106.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot7" type="Panel" parent="Skills/Slots"]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot8" type="Panel" parent="Skills/Slots"]
margin_left = 45.0
margin_top = 40.0
margin_right = 61.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot9" type="Panel" parent="Skills/Slots"]
margin_left = 90.0
margin_top = 40.0
margin_right = 106.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot10" type="Panel" parent="Skills/Slots"]
margin_top = 60.0
margin_right = 16.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot11" type="Panel" parent="Skills/Slots"]
margin_left = 45.0
margin_top = 60.0
margin_right = 61.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot12" type="Panel" parent="Skills/Slots"]
margin_left = 90.0
margin_top = 60.0
margin_right = 106.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Skills" type="Node2D" parent="Skills"]
position = Vector2( -3, 51 )

[node name="Level" type="Label" parent="Skills/Skills"]
margin_left = 90.0
margin_top = 96.0
margin_right = 102.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 3

[node name="Labels" type="Node2D" parent="Skills/Skills"]

[node name="Label" type="Label" parent="Skills/Skills/Labels"]
margin_left = -31.0
margin_top = 20.0
margin_right = 45.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 34, 20 )
custom_fonts/font = SubResource( 5 )
autowrap = true

[node name="Label2" type="Label" parent="Skills/Skills/Labels"]
margin_left = 52.0
margin_top = 20.0
margin_right = 128.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 34, 20 )
custom_fonts/font = SubResource( 6 )
autowrap = true

[node name="Label3" type="Label" parent="Skills/Skills/Labels"]
margin_left = -10.0
margin_top = -14.0
margin_right = 27.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 4 )
valign = 3

[node name="Label4" type="Label" parent="Skills/Skills/Labels"]
margin_left = 65.0
margin_top = -14.0
margin_right = 102.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 4 )
valign = 3

[node name="Slots" type="GridContainer" parent="Skills/Skills"]
visible = false
custom_constants/hseparation = 59
columns = 2

[node name="Choice1" type="Panel" parent="Skills/Skills/Slots"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Choice2" type="Panel" parent="Skills/Skills/Slots"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Class" type="Label" parent="Skills/Skills"]
margin_left = -20.0
margin_top = 96.0
margin_right = 17.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 4 )
text = "Level"
align = 1
valign = 3

[node name="UIEmpty" type="TextureRect" parent="Skills/Skills/Class"]
margin_left = 41.0
margin_top = 6.0
margin_right = 361.0
margin_bottom = 38.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="UIFull" type="TextureRect" parent="Skills/Skills/Class"]
margin_left = 41.0
margin_top = 6.0
margin_right = 41.0
margin_bottom = 38.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
margin_left = 213.245
margin_top = 109.0
margin_right = 319.245
margin_bottom = 197.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 5

[node name="Slot1" type="Panel" parent="GridContainer"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot2" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot3" type="Panel" parent="GridContainer"]
margin_left = 44.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot4" type="Panel" parent="GridContainer"]
margin_left = 66.0
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot5" type="Panel" parent="GridContainer"]
margin_left = 88.0
margin_right = 106.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot6" type="Panel" parent="GridContainer"]
margin_top = 22.0
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot7" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_top = 22.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot8" type="Panel" parent="GridContainer"]
margin_left = 44.0
margin_top = 22.0
margin_right = 62.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot9" type="Panel" parent="GridContainer"]
margin_left = 66.0
margin_top = 22.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot10" type="Panel" parent="GridContainer"]
margin_left = 88.0
margin_top = 22.0
margin_right = 106.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot11" type="Panel" parent="GridContainer"]
margin_top = 44.0
margin_right = 18.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot12" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_top = 44.0
margin_right = 40.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot13" type="Panel" parent="GridContainer"]
margin_left = 44.0
margin_top = 44.0
margin_right = 62.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot14" type="Panel" parent="GridContainer"]
margin_left = 66.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot15" type="Panel" parent="GridContainer"]
margin_left = 88.0
margin_top = 44.0
margin_right = 106.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot16" type="Panel" parent="GridContainer"]
margin_top = 66.0
margin_right = 18.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot17" type="Panel" parent="GridContainer"]
margin_left = 22.0
margin_top = 66.0
margin_right = 40.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot18" type="Panel" parent="GridContainer"]
margin_left = 44.0
margin_top = 66.0
margin_right = 62.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot19" type="Panel" parent="GridContainer"]
margin_left = 66.0
margin_top = 66.0
margin_right = 84.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Slot20" type="Panel" parent="GridContainer"]
margin_left = 88.0
margin_top = 66.0
margin_right = 106.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="EquipSlots" type="GridContainer" parent="."]
visible = false
margin_left = 174.0
margin_top = 110.0
margin_right = 192.0
margin_bottom = 194.0

[node name="HeadSlot" type="Panel" parent="EquipSlots"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 3 )

[node name="ShirtSlot" type="Panel" parent="EquipSlots"]
margin_top = 22.0
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 3 )

[node name="PantsSlot" type="Panel" parent="EquipSlots"]
margin_top = 44.0
margin_right = 18.0
margin_bottom = 62.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 3 )

[node name="ShoesSlot" type="Panel" parent="EquipSlots"]
margin_top = 66.0
margin_right = 18.0
margin_bottom = 84.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 3 )

[node name="Bag" type="Button" parent="."]
margin_left = 156.0
margin_top = 61.0
margin_right = 174.0
margin_bottom = 79.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 9 )
align = 0
icon_align = 1
expand_icon = true

[node name="Class" type="Button" parent="."]
margin_left = 177.0
margin_top = 61.0
margin_right = 195.0
margin_bottom = 79.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 14 )
align = 0
icon_align = 1
expand_icon = true

[connection signal="pressed" from="Bag" to="." method="_on_Bag_pressed"]
[connection signal="pressed" from="Class" to="." method="_on_Class_pressed"]
